fix: DTO naming
